WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206471
[LFC] LayoutState constructor shouldn't take LayoutTreeContent
https://bugs.webkit.org/show_bug.cgi?id=206471
Summary
[LFC] LayoutState constructor shouldn't take LayoutTreeContent
Antti Koivisto
Reported
2020-01-18 03:33:13 PST
It just needs the root container. This will allow more flexibility in layout box building and ownership.
Attachments
patch
(13.65 KB, patch)
2020-01-18 03:48 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(13.65 KB, patch)
2020-01-18 04:31 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(13.77 KB, patch)
2020-01-18 05:20 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2020-01-18 03:48:52 PST
Created
attachment 388146
[details]
patch
Antti Koivisto
Comment 2
2020-01-18 04:31:14 PST
Created
attachment 388148
[details]
patch
Antti Koivisto
Comment 3
2020-01-18 05:20:08 PST
Created
attachment 388149
[details]
patch
WebKit Commit Bot
Comment 4
2020-01-18 09:10:30 PST
Comment on
attachment 388149
[details]
patch Clearing flags on attachment: 388149 Committed
r254797
: <
https://trac.webkit.org/changeset/254797
>
WebKit Commit Bot
Comment 5
2020-01-18 09:10:32 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2020-01-18 09:11:12 PST
<
rdar://problem/58711195
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug